Fix app header gap

--- a/src/assets/styles/cmps/AppHeader.css
+++ b/src/assets/styles/cmps/AppHeader.css
@@ -1,6 +1,7 @@
 .app-header {
     display: flex;
     align-items: center;
+    gap: 5px;
 
     .app-logo {
 
